done two cnn layers, but still not right

--- a/gpu-code/conv/Makefile
+++ b/gpu-code/conv/Makefile
@@ -1,6 +1,6 @@
 #!/bin/bash
 GCC = gcc
-CC = g++                                                                        
+CC = g++ -std=c++0x                                                                    
 NVCC = nvcc
 MPICXX = mpicxx
 CCFLAGS = -c
